--- a/style.css
+++ b/style.css
@@ -2,11 +2,10 @@
 Theme Name: Ascent - Aviation Sustainability Center
 Theme URI: https://web.wsu.edu/
 Author: WSU University Communications
-Author URI: http://web.wsu.edu
+Author URI: https://web.wsu.edu/
 Description: A child theme of the WSU Web Communications Spine template, used for Sandboxing.
 Template: spine
-Version: 0.0.1
-License: Copyright Washington State University
-License URI: http://copyright.wsu.edu
-Tags: light
+Version: 0.4.0
+License: GPLv2 or later
+License URI: http://www.gnu.org/licenses/gpl-2.0.html
 */
