--- a/scss/asc.css
+++ b/scss/asc.css
@@ -15,29 +15,12 @@ html body {
   html body #spine #wsu-signature {
     background-image: url(/wp-content/uploads/sites/192/2015/01/ascent-logo.png); }
   html body #spine #side-search-area input#s {
-    width: 196px;
-    height: 37px;
-    display: block;
-    font-size: 1.2em;
-    background-color: #343232;
-    border: solid 1px #747270;
-    margin-left: auto;
-    margin-right: auto;
-    padding-left: 37px;
-    background-image: url(/wp-content/uploads/sites/192/2015/01/searchicon.png);
-    background-repeat: no-repeat;
-    background-position: 8px 8px;
-    background-size: 12%;
-    letter-spacing: 1px;
-    color: #EEEEEC; }
-    html body #spine #side-search-area input#s:hover, html body #spine #side-search-area input#s:focus {
-      border: 1px solid #0094ca; }
+    display: none; }
   html body #spine:not(.cropped) .spine-navigation {
     padding-bottom: 0px; }
   html body #spine .spine-sitenav {
     margin-left: 0;
-    margin-right: 0;
-    padding-top: 8px; }
+    margin-right: 0; }
     html body #spine .spine-sitenav ul li {
       border-style: none; }
       html body #spine .spine-sitenav ul li ul {
@@ -68,6 +51,7 @@ html body {
         background-image: none;
         background-color: #747270; }
     html body #spine .spine-sitenav:not(.homeless) > ul > li.active:first-child > a {
+      background-color: #747270;
       background-image: none; }
       html body #spine .spine-sitenav:not(.homeless) > ul > li.active:first-child > a:before, html body #spine .spine-sitenav:not(.homeless) > ul > li.active:first-child > a:hover {
         background-image: none;
@@ -284,7 +268,7 @@ html body {
   display: inline-block;
   width: 90%;
   padding-left: 0 !important;
-  line-height: 1.3em; }
+  line-height: 1.4em; }
 .tax-wsuwp_uc_topics main figure.featured-image, .post-type-archive-wsuwp_uc_project main figure.featured-image {
   display: none; }
 
