--- a/scss/asc.scss
+++ b/scss/asc.scss
@@ -190,6 +190,7 @@ html body {
 				color:$brand;
 				text-decoration: none;
 				border-bottom:1px solid $brand;
+				padding-bottom:1px;
 				&:hover {
 					color:$light-gray;
 					border-bottom:1px solid $lightest-gray;
@@ -209,7 +210,7 @@ html body {
 			@include heading-styles (2.2em, 1.1em, $heavy-gray);
 		}
 		h3 {
-			@include heading-styles (1.8em, 1.1em, $brand);
+			@include heading-styles (1.8em, 1.1em, $heavy-gray);
 			font-weight:400;
 		}
 		h4 {
